--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "expo": "^23.0.4",
     "native": "^0.3.3",
     "react": "^16.2.0",
-    "react-native": "0.50.3"
+    "react-native": "0.50.3",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
