--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "jest": "^22.1.4",
     "jest-expo": "23.0.0",
     "react-native-scripts": "1.9.0",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "^16.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -28,6 +29,7 @@
     "expo": "^23.0.4",
     "native": "^0.3.3",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-native": "0.50.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
