--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^22.1.4",
+    "jest-cli": "^22.1.4",
     "jest-expo": "23.0.0",
     "react-native-scripts": "1.9.0",
     "react-test-renderer": "^16.0.0"
