--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jest": "^22.1.4",
     "jest-cli": "^22.1.4",
     "jest-expo": "23.0.0",
-    "react-native-scripts": "1.9.0",
+    "react-native-scripts": "^2.0.1",
     "react-test-renderer": "^16.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -31,7 +31,7 @@
     "native": "^0.3.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-native": "0.50.3",
+    "react-native": "^0.57.7",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   }
